Add flag for additional locations to patch out with nop.
Also enable clap's wrap_help feature to make help messages look nicer.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
-clap = { version = "4.5.40", features = ["derive"] }
+clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
 thiserror = "2.0.12"
